--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiao Zhou"
   avatar           : "XiaoZHOU.jpg"
-  bio              : "Assistant Professor GSAI, RUC"
+  bio              : "Associate Professor GSAI, RUC"
   location         : "Beijing, China"
   employer         :
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Zhou+X&cauthor_id=37601210"
